k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snake-backend
  template:
    metadata:
      labels:
        app: snake-backend
    spec:
      containers:
        - name: backend
          image: dikshat1024/snake-backend:latest
          ports:
            - containerPort: 5000
