k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: snake-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
